--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout.less
@@ -6,6 +6,7 @@
 
 @import "bootstrap/mixins.less";
 @import "bootstrap/reset.less";
+@import "bootstrap/layouts.less";
 @import "bootstrap/scaffolding.less";
 @import "bootstrap/type.less";
 @import "bootstrap/alerts.less";
@@ -24,6 +25,9 @@
 }
 .pull-right {
     float: right;
+}
+.pull-left {
+    float: left;
 }
 
 a,
