added right pane in map edit

--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout-single.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout-single.less
@@ -29,6 +29,19 @@ body {
             }
         }
     }
+    #rightPane {
+        position: absolute;
+        top: 0;
+        right: 5px;
+        width: 250px;
+
+        &.pin-right {
+            right: 0;
+        }
+        &.free-content {
+            width: auto;
+        }
+    }
     #fastSearch {
     }
 }
