--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout.less
@@ -54,3 +54,4 @@ textarea {
 @import "layout-single.less";
 @import "profile-page.less";
 @import "world-title.less";
+@import "layout-edit-plain-geometry.less";
