--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout-edit-plain-geometry.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout-edit-plain-geometry.less
@@ -31,5 +31,18 @@ html.edit-geometry {
         right: 300px;
         height: 100%;
     }
+
+    div.gazap-widget-plain-map-embedded{
+        display: block;
+        width: 100%;
+        height: 100%;
+        background: #fdfdfd;
+
+        > .gazap-widget-plain-map-image-layer {
+            > .gazap-widget-plain-map-image-layer-target {
+                background: rgba(0, 255,0,100);
+            }
+        }
+    }
 }
 
