--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout-edit-plain-geometry.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout-edit-plain-geometry.less
@@ -22,6 +22,26 @@ html.edit-geometry {
             bottom: 0;
             width: 299px;
         }
+
+        #god-tool-surface-tile-current {
+            .tile-hash {
+                display: block;
+                text-align: right;
+                padding-right: 5px;
+            }
+            .tile-thumb {
+                display: block;
+                margin: 5px auto;
+                background: #E0E0E0;
+                border:solid 5px #999999;
+            }
+            .btn-toolbar {
+                text-align: center;
+            }
+            &.has-tile-thumb #god-tool-surface-tile-current-clear {
+                display: inherit;
+            }
+        }
     }
 
     #geometryCanvasOuter {
