--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout-edit-plain-geometry.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout-edit-plain-geometry.less
@@ -59,6 +59,15 @@ html.edit-geometry {
             &.has-tile-thumb #god-tool-surface-tile-current-clear {
                 display: inherit;
             }
+
+            .tile-upload-forms {
+                form {
+                    display: block;
+                    overflow: hidden;
+                    width: 0;
+                    height: 0;
+                }
+            }
         }
     }
 
