--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout-edit-plain-geometry.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout-edit-plain-geometry.less
@@ -47,20 +47,49 @@ html.edit-geometry {
         }
 
         #god-tool-surface-tile-current {
+            .tile-thumb-outer {
+                position: relative;
+                left: 45px;
+                width: 210px;
+            }
+
             .tile-thumb {
-                display: block;
-                margin: 5px auto;
+                display: table-cell;
+                vertical-align: middle;
+                text-align: center;
+                width: 200px;
+                height: 200px;
                 background: #E0E0E0;
                 border:solid 5px #999999;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    display: none;
+                }
+
+                span {
+                    display: block;
+                }
             }
             .btn-toolbar {
                 text-align: center;
             }
-            &.has-tile-thumb #god-tool-surface-tile-current-clear {
-                display: inherit;
+            &.has-tile-thumb {
+                .tile-thumb {
+                    img {
+                        display: inherit;
+                    }
+                    span {
+                        display: none;
+                    }
+                }
+                #god-tool-surface-tile-current-clear {
+                    display: inherit;
+                }
             }
 
-            .tile-upload-forms {
+            .tile-change-forms {
                 form {
                     display: block;
                     overflow: hidden;
