tile pictures is not shown

--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout-edit-plain-geometry.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout-edit-plain-geometry.less
@@ -98,6 +98,18 @@ html.edit-geometry {
                 }
             }
         }
+
+        #god-tool-contribution-list {
+            ul.contribution-list {
+                > li {
+                    > div {
+                        > strong {
+                            margin: 0 .5em;
+                        }
+                    }
+                }
+            }
+        }
     }
 
     #geometryCanvasOuter {
