--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout-edit-plain-geometry.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout-edit-plain-geometry.less
@@ -89,6 +89,18 @@ html.edit-geometry {
                 }
             }
 
+            &.has-tile-operations {
+                .btn-toolbar.tile-operations {
+                    display: inherit;
+                }
+            }
+
+            &.ui-disabled {
+                .btn-toolbar {
+                    display: none !important;
+                }
+            }
+
             .tile-change-forms {
                 form {
                     display: block;
