--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout-edit-plain-geometry.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout-edit-plain-geometry.less
@@ -114,9 +114,37 @@ html.edit-geometry {
         #god-tool-contribution-list {
             ul.contribution-list {
                 > li {
-                    > div {
-                        > strong {
-                            margin: 0 .5em;
+                    padding: 3px;
+                    > .change-tile-add {
+                        padding: 0 3px;
+                        border: solid 1px #ccc;
+                        border-radius: 5px;
+                        background: #FEFEFE;
+                        .author {
+                            > .id {
+                                color: #0000A0;
+                            }
+                            > .date {
+                                margin-left: .5em;
+                                color: #A000A0;
+                            }
+                            > .time {
+                                margin-left: .5em;
+                                color: #A000A0;
+                            }
+                        }
+                        .details {
+                            strong {
+                                margin: 0 .5em;
+                                font-style: italic;
+                            }
+                            .short {
+                            }
+                        }
+                        .btn-toolbar {
+                            text-align: right;
+                            margin-bottom: 0;
+                            margin-top: 3px;
                         }
                     }
                 }
@@ -132,7 +160,7 @@ html.edit-geometry {
         height: 100%;
     }
 
-    div.gazap-widget-plain-map-embedded{
+    div.gazap-widget-plain-map-embedded {
         display: block;
         width: 100%;
         height: 100%;
