--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout-edit-plain-geometry.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout-edit-plain-geometry.less
@@ -147,6 +147,12 @@ html.edit-geometry {
                             margin-top: 3px;
                         }
                     }
+
+                    &.disabled {
+                        .btn-toolbar {
+                            display: none;
+                        }
+                    }
                 }
             }
         }
