--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout-edit-plain-geometry.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout-edit-plain-geometry.less
@@ -114,11 +114,9 @@ html.edit-geometry {
         #god-tool-contribution-list {
             ul.contribution-list {
                 > li {
-                    padding: 3px;
                     > .change-tile-add {
                         padding: 0 3px;
-                        border: solid 1px #ccc;
-                        border-radius: 5px;
+                        border-bottom: solid 1px #ccc;
                         background: #FEFEFE;
                         .author {
                             > .id {
@@ -145,6 +143,7 @@ html.edit-geometry {
                             text-align: right;
                             margin-bottom: 0;
                             margin-top: 3px;
+                            padding-right: 10px;
                         }
                     }
 
