--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout-single.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout-single.less
@@ -490,5 +490,11 @@ div {
             text-shadow: 0 0 1px #aee;
             font-weight: bold;
         }
+        
+        > ul {
+            > li {
+                float:left;
+            }
+        }
     }
 }
