Got Edit Controller is alive again

--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout-edit-plain-geometry.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout-edit-plain-geometry.less
@@ -114,7 +114,7 @@ html.geometry-god {
         #god-tool-contribution-list {
             ul.contribution-list {
                 > li {
-                    > .change-tile-add {
+                    > .change-TILE-ADD {
                         padding: 0 3px;
                         border-bottom: solid 1px #ccc;
                         background: #FEFEFE;
