God Approve Controller is alive again

--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout-edit-plain-geometry.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout-edit-plain-geometry.less
@@ -144,6 +144,10 @@ html.geometry-god {
                             margin-bottom: 0;
                             margin-top: 3px;
                             padding-right: 10px;
+
+                            .btn-group + .btn-group {
+                                margin-left: 0;
+                            }
                         }
                     }
 
