--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout-single.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout-single.less
@@ -44,6 +44,15 @@ body {
     }
     #fastSearch {
     }
+
+    a.username {
+        img {
+            margin-right: 3px;
+        }
+        span {
+            line-height: 16px;
+        }
+    }
 }
 
 .input-append .btn {
@@ -151,6 +160,7 @@ form {
         }
     }
 
+
     &.logged-true {
         >.account-name {
             text-align: start;
@@ -161,9 +171,6 @@ form {
                 > img {
                     position: relative;
                     top: 0;
-                }
-                > span {
-                    padding-left: 4px;
                 }
             }
 
