--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout-edit-plain-geometry.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout-edit-plain-geometry.less
@@ -200,6 +200,7 @@ html.geometry-god {
         top: 0;
         right: 300px;
         height: 100%;
+        background: transparent url(../img/sprites/tiled-back.png) repeat;
     }
 
     div.gazap-widget-plain-map-embedded {
