show login modal page

--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/index.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/index.vm
@@ -4,6 +4,7 @@
 <body class="sci">
 <section id="topBar">
     #parse('shared/html-bars-brand.vm')
+    #parse('shared/html-bars-account.vm')
 </section>
 </body>
 </html>
