--- a/src/waypalm-site/src/main/webapp/static/theme/less/layout-sci.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/layout-sci.less
@@ -4,13 +4,15 @@ body {
 
 #topBar {
     > a.brand-logo {
+        margin-left: .3em;
         text-decoration: none;
         font-size: 1.6em;
-        line-height: 1.5em;
+        line-height: 1.6em;
         color: #f0f0f0;
         font-weight: bold;
         position: relative;
         font-stretch: ultra-condensed;
+        float: left;
 
         > span {
             position: absolute;
@@ -19,6 +21,24 @@ body {
             display: block;
             bottom: 0;
             background: transparent url('../images/gradient-v-121111-100-s00-eFF.png') repeat-x top left;
+        }
+    }
+
+    > #accountBar.logged-false {
+        float: left;
+        padding-left: .6em;
+        padding-top: .5em;
+        vertical-align: center;
+
+        .actions {
+            text-align: center;
+            font-weight: bolder;
+            > a {
+                display: block;
+                color: #fafafa;
+                font-size: .7em;
+                line-height: 1em;
+            }
         }
     }
 }
