--- a/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
@@ -1,18 +1,18 @@
+@import "bootstrap/variables.less";
+@import "variables.less";
+
 @import "bootstrap/mixins.less";
 @import "bootstrap/reset.less";
-
-@sansFontFamily: "DejaVu Sans","Helvetica Neue",Helvetica, Arial, sans-serif;
-@serifFontFamily: Georgia,"Times New Roman",Times, serif;
-@monoFontFamily: Monaco,Menlo, Consolas,"Courier New",monospace;
-
-@baseFontFamily: @sansFontFamily;
-@baseFontSize: 1em;
-@baseLineHeight: 1.1em;
-@textColor: #ffffff;
-@bodyBackground: #121111;
-
-@linkColor: #ffffff;
-@linkColorHover: #ffffff;
-
 @import "bootstrap/scaffolding.less";
+@import "bootstrap/forms.less";
+@import "bootstrap/buttons.less";
+@import "bootstrap/button-groups.less";
+@import "bootstrap/alerts.less";
+
+a, a:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
 @import "layout-sci.less";
+@import "forms.less";
