--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/access/register.modal.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/access/register.modal.vm
@@ -10,9 +10,9 @@
         </span>
     </h1>
 
-    <p class="notice alert-info">
+    <div class="notice alert-info">
         #springMessage1('Register.notice', $au)
-    </p>
+    </div>
 
     <div>
         <form id="registerForm" action="${au}/auth/register" method="post">
@@ -28,16 +28,18 @@
                            placeholder="#springMessage('Register.form.password.placeholder')"/>
                 </div>
             </div>
-            <div id="recaptchaContainer">
-                <div id="recaptcha-container"
-                     class="recaptcha_nothad_incorrect_sol recaptcha_isnot_showing_audio">
-                    <p class="wait-message">
-                        #springMessage('Register.waitCaptcha')
-                    </p>
+            #if($eCdn.registerCaptchEnabled)
+                <div id="recaptchaContainer">
+                    <div id="recaptcha-container"
+                         class="recaptcha_nothad_incorrect_sol recaptcha_isnot_showing_audio">
+                        <p class="wait-message">
+                            #springMessage('Register.waitCaptcha')
+                        </p>
+                    </div>
                 </div>
-            </div>
+            #end
             <div class="control-group submit-group">
-                <button class="btn" type="submit">
+                <button class="btn btn-primary" type="submit">
                     #springMessage('Register.form.submit')
                 </button>
                 <a class="submit-option modal-closer">
