--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/index.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/index.vm
@@ -2,7 +2,7 @@
 <html>
     #parse('shared/html-head.vm')
 <body class="sci">
-<section id="topBar">
+<section id="topBar" class="clearfix">
     #parse('shared/html-bars-brand.vm')
     #parse('shared/html-bars-account.vm')
 </section>
