--- a/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
@@ -1,6 +1,5 @@
 @import "bootstrap/variables.less";
 @import "variables.less";
-
 @import "bootstrap/mixins.less";
 @import "bootstrap/reset.less";
 @import "bootstrap/scaffolding.less";
@@ -12,6 +11,10 @@
 a, a:hover {
     text-decoration: underline;
     cursor: pointer;
+}
+
+.hidden {
+    display: none;
 }
 
 @import "layout-sci.less";
