--- a/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
@@ -1,21 +1,9 @@
-@import "bootstrap/variables.less";
-@import "variables.less";
 @import "bootstrap/mixins.less";
-@import "bootstrap/reset.less";
-@import "bootstrap/scaffolding.less";
-@import "bootstrap/forms.less";
-@import "bootstrap/buttons.less";
-@import "bootstrap/button-groups.less";
-@import "bootstrap/alerts.less";
-
-a, a:hover {
-    text-decoration: underline;
-    cursor: pointer;
-}
-
-.hidden {
-    display: none;
-}
-
-@import "layout-sci.less";
+@import "variables.less";
+@import "reset.less";
+@import "navigation.less";
 @import "forms.less";
+
+body {
+    background: #1E1E1E url(../images/dirty_body.png) repeat-x center top;
+}
