--- a/src/waypalm-site/src/main/webapp/static/theme/less/variables.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/variables.less
@@ -2,5 +2,6 @@
 @serifFontFamily: Georgia,"Times New Roman",Times, serif;
 @monoFontFamily: Monaco,Menlo, Consolas,"Courier New",monospace;
 
-@baseFontSize: 1em;
-@baseLineHeight: 1.1em;
+@bodyFontFamily: @sansFontFamily;
+@bodyFontSize: 1em;
+@bodyLineHeight: 1.1em;
