--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/shared/html-head.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/shared/html-head.vm
@@ -16,27 +16,12 @@
     <script>
         head.js(
                 {jquery:"$libRoot/jquery/jquery-1.7.1.min.js"},
-                {jquery_form:"$libRoot/jquery/jquery.form-2.94.min.js"},
                 {jquery_exists:"$libRoot/jquery/jquery.exists.js"},
-                {fancybox:"$libRoot/fancybox/jquery.fancybox.js"},
                 {undescore:"$libRoot/backbone/undescore-1.1.7.min.js"},
-                {backbone:"$libRoot/backbone/backbone-0.5.3.min.js"},
-                {bootstrap_tooltip:"$libRoot/bootstrap/bootstrap-tooltip.js"},
-                {bootstrap_popover:"$libRoot/bootstrap/bootstrap-popover.js"},
-                {bootstrap_tab:"$libRoot/bootstrap/bootstrap-tab.js"},
-                {bootstrap_button:"$libRoot/bootstrap/bootstrap-button.js"},
-                {local_visitor:"$scriptsRoot/visitor.js"},
-                {local_ui:"$scriptsRoot/ui.js"},
-                {local_bus:"$scriptsRoot/bus.js"},
-                "$scriptsRoot/events/Account.js",
-                "$scriptsRoot/events/ReCaptcha.js",
-                "$scriptsRoot/events/UserProfile.js",
-                "$scriptsRoot/events/World.Modals.js",
-                "$scriptsRoot/events/Map.Forms.js"
+                {backbone:"$libRoot/backbone/backbone-0.5.3.min.js"}
         );
     </script>
 
-    <link rel="stylesheet" href="${libRoot}/fancybox/jquery.fancybox.css"/>
     #if($eCdn.debugMode)
         <link rel="stylesheet/less" href="$cp/static/theme/less/layout.less"/>
         <script type="text/javascript" src="$libRoot/less/less-1.3.0.min.js"></script>
