--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/index.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/index.vm
@@ -3,9 +3,9 @@
     #parse('shared/html-head.vm')
 <body class="sci">
 <header class="sci-header clearfix">
-    <section id="logoBar">
+    <div id="logoBar">
         #parse('shared/html-bars-brand.vm')
-    </section>
+    </div>
 </header>
 </body>
 </html>
