--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/shared/html-head.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/shared/html-head.vm
@@ -18,7 +18,8 @@
                 {jquery:"$libRoot/jquery/jquery-1.7.1.min.js"},
                 {jquery_exists:"$libRoot/jquery/jquery.exists.js"},
                 {undescore:"$libRoot/backbone/undescore-1.1.7.min.js"},
-                {backbone:"$libRoot/backbone/backbone-0.5.3.min.js"}
+                {backbone:"$libRoot/backbone/backbone-0.5.3.min.js"},
+                {ui:"$scriptsRoot/ui.js"}
         );
     </script>
 
