--- a/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
@@ -8,39 +8,53 @@ header.sci-header {
 
 #logoBar {
     float: left;
+    width: 200px;
+    text-align: right;
+    position: relative;
 
-    > #brandLogo {
-        float: left;
-        margin-left: .5em;
+    #brandLogo {
         text-decoration: none;
         display: block;
-        width: 170px;
+        width: 100%;
         height: 40px;
-        background: transparent url(../images/dirty_brand.png) no-repeat center center;
+        background: transparent url(../images/dirty_brand.png) no-repeat right center;
 
         &:focus {
             outline: none;
         }
     }
 
-    > #brandMenu {
-        float: left;
-        width: 10em;
-        padding: .2em 0 .2em 1em;
+    #brandMenu {
         text-align: right;
-        border-right: solid 1px @sciHeaderBorderColor;
+        display: block;
+        width: 100%;
 
-        > a {
-            width: 100%;
+        > li {
             display: block;
             color: #eaeaea;
+            background: transparent url(../images/brand_menu-arrow.png) right center no-repeat;
+            padding: .2em 15px .2em;
             font-size: 80%;
-            text-decoration: none;
-            padding-right: 1em;
-            &.second {
-                border-top: solid 1px @sciHeaderBorderColor;
+
+            &.open {
+                background-image: url(../images/brand_menu-arrow-open.png);
+            }
+
+            a {
+                text-decoration: none;
             }
         }
     }
 
+    #brandMenuContent {
+        position: absolute;
+        left: 100%;
+        height: 90%;
+        top: 5%;
+        background: #6b6c6c  url(../images/dirty_body.png);
+        margin-left: -1px;
+        padding: 0 .2em;
+        .border-radius(.2em);
+        min-width: 10em;
+    }
 }
