--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/brandMenu-account.bar.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/brandMenu-account.bar.vm
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
-<html>
-    #parse('shared/html-head.vm')
-<body class="sci">
-<header class="sci-header clearfix">
-    <div id="logoBar">
-        #parse('shared/html-bars-brand.vm')
-    </div>
-</header>
-<div style="text-align: center">
+<div id="accountBar" class="content">
+    <span class="head">Введите адрес почты и пароль</span>
+
     <form>
         <div class="formRow">
             <input type="text" name="j_username" placeholder="e-mail"/>
@@ -20,5 +14,3 @@
         </div>
     </form>
 </div>
-</body>
-</html>
