--- a/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
@@ -31,7 +31,6 @@ header.sci-header {
 
         > li {
             display: block;
-            color: #eaeaea;
             background: transparent url(../images/brand_menu-arrow.png) right center no-repeat;
             padding: .2em 15px .2em;
             font-size: 80%;
@@ -41,7 +40,13 @@ header.sci-header {
             }
 
             a {
+                color: #eaeaea;
                 text-decoration: none;
+                outline: none;
+
+                &:focus {
+                    color: lighten(#eaeaea, 50%);
+                }
             }
         }
     }
@@ -49,12 +54,26 @@ header.sci-header {
     #brandMenuContent {
         position: absolute;
         left: 100%;
-        height: 90%;
         top: 5%;
-        background: #6b6c6c  url(../images/dirty_body.png);
+        background: #6b6c6c url(../images/dirty_body.png);
+        .border-radius(.2em);
         margin-left: -1px;
         padding: 0 .2em;
-        .border-radius(.2em);
         min-width: 10em;
+        min-height: 90%;
+        text-align: left;
+
+        > .load-wait {
+            width: 100%;
+            height: 100%;
+            background: transparent url(../images/load-bar48x7.gif) no-repeat center center;
+        }
+
+        >.content {
+            > .head {
+                word-break: keep-all;
+                white-space: nowrap;
+            }
+        }
     }
 }
