--- a/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
@@ -58,7 +58,6 @@ header.sci-header {
         background: #6b6c6c url(../images/dirty_body.png);
         .border-radius(.2em);
         margin-left: -1px;
-        padding: 0 .2em;
         min-width: 10em;
         min-height: 90%;
         text-align: left;
@@ -70,9 +69,10 @@ header.sci-header {
         }
 
         >.content {
+            font-size: .9em;
+
             > .head {
-                word-break: keep-all;
-                white-space: nowrap;
+                padding: .3em;
             }
         }
     }
