--- a/src/waypalm-site/src/main/webapp/static/theme/less/forms.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/forms.less
@@ -1,7 +1,27 @@
 .btn-style(@color: #555){
+    @box-shadow1: 1px 1px 1px fade(darken(@color, 20%), 90%);
+    @box-shadow2: -1px -1px 1px fade(lighten(@color, 20%), 90%);
+    @box-shadows: @box-shadow1, @box-shadow2;
     border: solid 1px @color;
     cursor: pointer;
-    background: @color;
+    background: @color url(../images/input-back-shadow-white.png) repeat-x left top;
+    text-decoration: none;
+    font-size: @bodyFontSize;
+    line-height: @bodyLineHeight;
+    color: #eee;
+    font-family: @bodyFontFamily;
+    padding: .1em .3em;
+    margin: 0;
+    outline: none;
+    .box-shadow(@box-shadow1);
+
+    &:focus,
+    &:hover {
+        outline: none;
+        text-decoration: none;
+        color: lighten(#eee, 20%);
+        background-color: lighten(@color, 20%);
+    }
 }
 
 form {
@@ -26,7 +46,9 @@ input {
     }
 }
 
-input[type=submit] {
+input[type=submit],
+button,
+a.btn {
     .btn-style();
 }
 
