--- a/src/waypalm-site/src/main/webapp/static/theme/less/forms.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/forms.less
@@ -14,6 +14,7 @@
     margin: 0;
     outline: none;
     .box-shadow(@box-shadow1);
+    .border-radius(.2em);
 
     &:focus,
     &:hover {
@@ -51,4 +52,12 @@ button,
 a.btn {
     .btn-style();
 }
+
+input[type=submit].btn-small,
+button.btn-small,
+a.btn-small {
+    font-size: 80%;
+    line-height: 80%;
+}
+
 
