--- a/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
@@ -61,3 +61,34 @@ div.two-column {
         color: white;
     }
 }
+
+#userColumn {
+    color: #fff;
+    padding: 1em;
+
+    > .user-title {
+        > img {
+            float: left;
+            margin-right: 1em;
+            .border-radius(6px);
+            border: solid 1px #333;
+        }
+        > h2 {
+            font-size: 100%;
+        }
+        > .quick-menu {
+            a {
+                color: #aaa;
+                font-size: 75%;
+            }
+        }
+    }
+
+    > hr {
+        margin: 1em 1em 1em 0;
+        height: 10px;
+        border: none;
+        background: transparent url(../images/input-back-shadow-white-a50.png) repeat-x left bottom;
+        .box-shadow(0 -1px 1px #333);
+    }
+}
