--- a/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
@@ -1,6 +1,7 @@
 @import "bootstrap/mixins.less";
 @import "variables.less";
 @import "reset.less";
+@import "icons.less";
 @import "navigation.less";
 @import "forms.less";
 
@@ -85,10 +86,35 @@ div.two-column {
     }
 
     > hr {
-        margin: 1em 1em 1em 0;
+        margin: 1em 1em .3em 0;
         height: 10px;
         border: none;
         background: transparent url(../images/input-back-shadow-white-a50.png) repeat-x left bottom;
         .box-shadow(0 -1px 1px #333);
+    }
+}
+
+.widget {
+    > .head {
+        .clearfix();
+
+        > h3 {
+            font-size: 100%;
+            font-weight: bolder;
+        }
+        > ul.quick-actions {
+            list-style: none;
+            float: right;
+
+            > li {
+                list-style: none;
+
+                > a {
+                    color: #fff;
+                    font-size: 60%;
+                    line-height: 100%;
+                }
+            }
+        }
     }
 }
