--- a/src/waypalm-site/src/main/webapp/static/theme/less/variables.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/variables.less
@@ -1,4 +1,4 @@
-@sansFontFamily: "DejaVu Sans","Helvetica Neue",Helvetica, Arial, sans-serif;
+@sansFontFamily: Arial, Helvetica, sans-serif;
 @serifFontFamily: Georgia,"Times New Roman",Times, serif;
 @monoFontFamily: Monaco,Menlo, Consolas,"Courier New",monospace;
 
