--- a/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
@@ -6,7 +6,7 @@
 @import "forms.less";
 
 body {
-    background: #1E1E1E url(../images/dirty_body.png) repeat-x center top;
+    background: #eaeaea url(../images/dirty_body-light.png) repeat-x center top;
     min-width: 640px;
 }
 
@@ -54,17 +54,14 @@ div.two-column {
     > .head {
         font-size: 120%;
         line-height: 120%;
-        color: white;
     }
     > .body {
         font-size: 100%;
         line-height: 100%;
-        color: white;
     }
 }
 
 #userColumn {
-    color: #fff;
     padding: 1em;
 
     > .user-title {
@@ -78,9 +75,9 @@ div.two-column {
             font-size: 100%;
         }
         > .quick-menu {
+            font-size: 75%;
+            line-height: 100%;
             a {
-                color: #aaa;
-                font-size: 75%;
             }
         }
     }
@@ -108,11 +105,10 @@ div.two-column {
 
             > li {
                 list-style: none;
+                font-size: 60%;
+                line-height: 100%;
 
                 > a {
-                    color: #fff;
-                    font-size: 60%;
-                    line-height: 100%;
                 }
             }
         }
