--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/index.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/index.vm
@@ -2,7 +2,7 @@
 <html>
     #parse('shared/html-head.vm')
 <body class="sci">
-<header class="sci-header clearfix">
+<header class="sci-header">
     <div id="logoBar">
         #parse('shared/html-bars-brand.vm')
     </div>
